--- a/app/css/defaults.css
+++ b/app/css/defaults.css
@@ -8,7 +8,7 @@ body {
        when the scrollbar appears or disappears. */
     overflow-y: scroll;
     overflow-x: auto;
-    overscroll-behavior: contain;
+    overscroll-behavior-y: none;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
