--- a/app/css/pages/editor.css
+++ b/app/css/pages/editor.css
@@ -283,6 +283,7 @@
             @apply shadow-xsZ1 z-shadow;
 
             & .tabs {
+                @apply scroll-x-hidden;
                 @apply flex flex-shrink-0 flex-grow-0;
                 @apply py-16 px-24;
 
