--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -12,6 +12,7 @@
 @import "./ui-kit/text";
 @import "./ui-kit/tracks";
 @import "./ui-kit/filters";
+@import "./ui-kit/scroll";
 
 @import "./tooltips/generic";
 @import "./tooltips/base";
@@ -66,7 +67,6 @@
 @import "./components/loading-suspense";
 @import "./components/unlocked-concept";
 @import "./components/discussion-timeline";
-
 
 @import "./components/share-panel";
 @import "./components/split-pane";
