--- a/app/css/ui-kit/scroll.css
+++ b/app/css/ui-kit/scroll.css
@@ -7,5 +7,13 @@
         &::-webkit-scrollbar {
             display: none; /* Chrome, Opera, Safari */
         }
+        mask-image: linear-gradient(
+            to right,
+            transparent,
+            white 20px,
+            white 90%,
+            transparent
+        );
+        padding-right: 10%;
     }
 }
