Make tabs scrollable on the x-axis in editor (#3615)
* Add hidden x-axis scroll util

* Import ui kit

* Add mask-image to scroll

--- a/app/css/pages/editor.css
+++ b/app/css/pages/editor.css
@@ -285,6 +285,7 @@
             & .tabs {
                 @apply flex flex-shrink-0 flex-grow-0;
                 @apply py-16 px-24;
+                @apply scroll-x-hidden;
 
                 & .c-tab {
                     height: 36px;
