--- a/app/views/journey/_hero.html.haml
+++ b/app/views/journey/_hero.html.haml
@@ -1,8 +1,9 @@
 %header.hero
-  .lg-container.container
-    .background
-      = image_tag("hero-journey.svg", role: :presentation)
-      .bottom
+  .background
+    = image_tag("hero-journey.svg", role: :presentation)
+    .bottom
+
+  .lg-container
 
     .content
       .privacy
