Use US English: familiarize
From the Exercism Style Guide [1]:

    This document acts as a Style Guide for the language and wording used in exercises.

    [...]

    All content should be written in US English, which differs from UK English in a variety of ways.
    In the future other translations may occur, but the "official" Exercism language is US English.

[1] https://github.com/exercism/docs/blob/73835d5d918f/building/markdown/style-guide.md#language

--- a/app/views/tracks/exercises/show.html.haml
+++ b/app/views/tracks/exercises/show.html.haml
@@ -17,7 +17,7 @@
 
       - if @exercise.tutorial?
         %section.tutorial-introduction
-          “Hello, World!” will get you writing some #{@track.title} and familiarise yourself with the Exercism workflow.
+          “Hello, World!” will get you writing some #{@track.title} and familiarize yourself with the Exercism workflow.
           %strong Completing it unlocks the rest of the #{@track.title} Track.
 
       - elsif @exercise.practice_exercise?
