--- a/app/views/tracks/show/_start_track_section.html.haml
+++ b/app/views/tracks/show/_start_track_section.html.haml
@@ -4,5 +4,5 @@
     %h3
       Introduce yourself to the #{track.title} world by completing
       %strong ”Hello, World!”
-    %p Familiarise yourself with how Exercism works and submit your first bit of code on the platform by completing the “Hello, World!” tutorial exercise.
+    %p Familiarize yourself with how Exercism works and submit your first bit of code on the platform by completing the “Hello, World!” tutorial exercise.
     = link_to "Go to the “Hello, World!” exercise", track_exercise_path(track, "hello-world"), class: 'btn-primary btn-m'
