Use US English: finalized

--- a/app/views/mailers/mailshots_mailer/challenge_12in23_calendar.text.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_calendar.text.erb
@@ -8,7 +8,7 @@ Thousands of people have already signed up for #12in23. It's going to be a reall
 >> Sign up at https://exercism.org/challenges/12in23
 <% end %>
 
-We've now finalised the calendar for the year. Each month is going to have a different theme, with interviews from langauge experts (and even language creators!), live streaming of walkthroughs and solving exercises, themed swag, and all sorts of goodies. I've put together a video talking through the different themes - have a watch and let us know which you're most excited for!
+We've now finalized the calendar for the year. Each month is going to have a different theme, with interviews from langauge experts (and even language creators!), live streaming of walkthroughs and solving exercises, themed swag, and all sorts of goodies. I've put together a video talking through the different themes - have a watch and let us know which you're most excited for!
 
 >> Watch the video calendar introduction at https://www.youtube.com/watch?v=2refhxXqePI
 
