Use US English: optimize

--- a/app/views/about/hiring_rails_developer.html.haml
+++ b/app/views/about/hiring_rails_developer.html.haml
@@ -121,7 +121,7 @@
         If these sound exciting to you, then you'll probably enjoy working with us:
       %ul.text-p-xlarge.mb-16
         %li We take on high levels of personal responsibility and work autonomously. We discuss problems and ideas with other if we get stuck, but don't pair-program.
-        %li We have a strong tendency towards pragmatism, and tend to make decisions that optimise for the bigger picture over situational-perfection.
+        %li We have a strong tendency towards pragmatism, and tend to make decisions that optimize for the bigger picture over situational-perfection.
         %li We write code that makes it easy for others in the team to work with. We choose standards and stick to them. We generally prioritise developer-happiness over technical optimisation.
         %li We are dedicated to continous personal development. We each have intrinsic drives to learn, grow and elevate our standards.
         %li We believe and trust in each other, support each other, and make time for each other.
