Use US English: organize

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -208,7 +208,7 @@
         .community-team
           = graphical_icon "maintaining"
           %h3 Track Maintainers
-          %p.text-p-large Our maintainers are the lynchpins of the language tracks and exercises on Exercism. They create and organise exercises for each of our 50 languages and help guide us to ensure Exercism teaches students in the most idiomatic way possible.
+          %p.text-p-large Our maintainers are the lynchpins of the language tracks and exercises on Exercism. They create and organize exercises for each of our 50 languages and help guide us to ensure Exercism teaches students in the most idiomatic way possible.
           = render ViewComponents::ProminentLink.new("See all Exercism maintainers", contributing_contributors_path(category: :maintaining))
 
         .community-team
