Use US English: standardized

--- a/app/views/mentoring/automation/tooltip_locked.html.haml
+++ b/app/views/mentoring/automation/tooltip_locked.html.haml
@@ -13,7 +13,7 @@
   %h4.font-semibold.mb-4 What is automation?
 
   %p.mb-4.leading-150
-    Automation allows you to submit standardised responses to code submissions that get shared as part of automated feedback on solutions.
+    Automation allows you to submit standardized responses to code submissions that get shared as part of automated feedback on solutions.
 
   = link_to doc_path(:using, "feedback/automated"), class: 'external-link' do
     .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
