--- a/app/views/components/footer/shared.html.haml
+++ b/app/views/components/footer/shared.html.haml
@@ -89,7 +89,8 @@
       .col.hidden.md:block.mt-32.xl:mt-0
         %h3.text-h6 Want to add a language track to Exercism?
         %p.text-p-base
-          = link_to "Start a new topic in the forum", "https://forum.exercism.org/c/exercism/4"
+          Start a new topic
+          = link_to "in the forum", "https://forum.exercism.org/c/exercism/4"
           and let's discuss it.
   %hr
   .legals.mt-24.md:mt-32.mb-32.md:mb-40.flex.md:items-center.flex-col.md:flex-row
