--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -88,6 +88,8 @@
 @import "./components/multiple-select";
 @import "./components/track-select";
 
+@import "./components/insiders-prompts";
+
 @import "./components/user_activity";
 @import "./components/search-bar";
 @import "./components/community-solution";
@@ -172,6 +174,7 @@
 
 @import "./pages/partners/gdn";
 @import "./pages/about";
+@import "./pages/insiders";
 @import "./pages/hiring";
 @import "./pages/team";
 @import "./pages/individual_supporters";
