--- a/app/css/pages/insiders.css
+++ b/app/css/pages/insiders.css
@@ -1,23 +1,103 @@
 #page-insiders {
+    @apply py-64;
+    background-color: #282339;
+    color: #cbc9d9;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: #f0f3f9;
+    }
+
+    .light-green-prompt {
+        @apply block mx-auto max-w-[600px];
+        @apply py-8 px-20 text-center;
+        @apply rounded-8;
+        @apply border-1 border-greenPrompt font-normal text-18 leading-150;
+        background-color: rgba(theme(colors.greenPrompt), 0.16);
+    }
+    .get-insiders-link {
+        @apply btn-l btn-primary cursor-pointer;
+        box-shadow: 0px 2px 4px rgba(79, 114, 205, 0.4);
+    }
+
+    .launching {
+        @apply text-h5 bg-launchingYellow shadow-launching py-8 px-16 mr-auto inline-block mb-24 text-textColor1;
+    }
+
     .features {
-        @apply grid lg:grid-cols-3 grid-cols-1 gap-24;
+        @apply grid lg:grid-cols-3 grid-cols-1 gap-24 mb-56;
         .feature {
             .c-icon {
                 height: 45px;
                 width: 45px;
                 @apply mb-12;
             }
+            box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.15);
             background-color: #302b42;
             @apply py-20 px-24 rounded-16;
             @apply flex flex-col;
 
             h4 {
-                @apply text-h4 mb-8;
+                @apply text-h4 mb-8 text-[#F0F3F9];
             }
 
             p {
-                @apply text-p-base;
+                @apply text-p-base text-left;
             }
+        }
+    }
+
+    details {
+        @apply cursor-pointer;
+        &[open] {
+            summary {
+                @apply mb-8;
+                &::after {
+                    transform: rotate(-180deg);
+                }
+            }
+        }
+        background: #302b42;
+        @apply py-16 px-32 rounded-16;
+        @apply text-18 font-normal leading-150;
+
+        summary {
+            @apply flex items-center;
+            @apply select-none;
+            outline: none;
+            list-style: none;
+            @apply text-24 font-semibold leading-130;
+
+            &::-webkit-details-marker {
+                display: none;
+            }
+
+            &::after {
+                content: url("icons/chevron-down-circle.svg");
+                height: 32px;
+                width: 32px;
+                margin-left: auto;
+                transform: rotate(0deg);
+                transition: transform 0.2s ease-in-out;
+            }
+        }
+    }
+
+    .gradient-container {
+        @apply py-64;
+        background: linear-gradient(
+            180deg,
+            #221e31 0%,
+            rgba(34, 30, 49, 0) 100%
+        );
+
+        h2,
+        p {
+            @apply text-center;
         }
     }
 }
