--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -33,7 +33,13 @@
           %p= feature[:desc]
 
   .gradient-container
-    .lg-container
+    .lg-container.relative
+      = graphical_icon "pixel-diamond", css_class: "left-[120px]"
+      = graphical_icon "pixel-emerald", css_class: "right-[159px] top-[180px]"
+      = graphical_icon "pixel-emoji", css_class: "right-[179px] -top-[16px]"
+      = graphical_icon "pixel-coin", css_class: "top-[172px] left-[176px]"
+      = graphical_icon "pixel-coin", css_class: "right-[28px] top-[66px]"
+
       %h2.text-h1.mb-16 Offers from our partners
       %p.text-p-large.mx-auto.mb-32{ class: "max-w-[800px]" }
         We're source great free trials and deals for you from commercial partners. It's their way of saying thank you for your work in Open Source.
