--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -66,4 +66,10 @@
         filter: invert(94%) sepia(7%) saturate(129%) hue-rotate(182deg)
             brightness(102%) contrast(96%);
     }
+
+    /* #9D8DF7 */
+    .filter-notification-bell-dark {
+        filter: invert(40%) sepia(48%) saturate(1566%) hue-rotate(221deg)
+            brightness(99%) contrast(94%);
+    }
 }
