Add color instead of none

--- a/app/css/components/site-footer.css
+++ b/app/css/components/site-footer.css
@@ -7,9 +7,9 @@ body.namespace-.controller-insiders {
         background: #191525;
 
         .external-section {
-            background: none;
+            background: #191525;
             .bottom {
-                background: none;
+                background: #191525;
             }
 
             .btn-enhanced.btn-l {
