--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -8,7 +8,8 @@
         %h3.text-h3.mb-16 Our way of saying thank you.
         %h5.launching Launching End of April 2023
         %p.text-p-large.mb-24 Get behind the scenes access, Dark Mode, ChatGPT integration, offers from our partners, exclusive badges, and more.
-        = render ReactComponents::Insiders::Status.new
+        - if current_user.present?
+          = render ReactComponents::Insiders::InsidersStatus.new
 
       .top-rhs
         =# TODO
