Add youtube video

--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -12,8 +12,8 @@
           = render ReactComponents::Insiders::InsidersStatus.new
 
       .top-rhs
-        =# TODO
-        %div{ style: "width: 623px; height: 350px; background: #302B42; border-radius: 24px; margin-left:auto" }
+        .c-youtube-container
+          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/8onnSv5r9Hw", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
     %h2.text-h2.mb-32 Exclusive Insider Features
     .features
