--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -4,7 +4,7 @@
       .top-lhs
         %h1.text-h1.flex.items-center.gap-20.mb-8.text-48
           Exercism Insiders
-          = graphical_icon "purple-pixel-heart"
+          = graphical_icon "insiders"
         %h3.text-h3.mb-16 Our way of saying thank you.
         %h5.launching Launching End of April 2023
         %p.text-p-xlarge.mb-24 Get behind the scenes access, Dark Mode, ChatGPT integration, offers from our partners, exclusive badges, and more.
